# kitcreator

./: README  go-extensions.md  kitcreator
.github/parameters/: setup-macports.yaml
.github/scripts/: create-release.tcl
.github/workflows/: build-linux.yml  build-macos.yml  build-windows-clang64.yml  build-windows.yml  create-release.yml  pkgs-gui-full.txt  pkgs-gui-minimal.txt  pkgs-gui-tcl9.txt  pkgs-gui.txt  pkgs-kitdll-tcl9.txt  pkgs-kitdll.txt  pkgs-nogui-full.txt  pkgs-nogui-minimal.txt  pkgs-nogui.txt
Trf/: build.sh
Trf/patches/: Trf-2.1.4-fix-static-build.diff  Trf-2.1.4-fix-typedefs-and-staticdefs.diff
cffi/: build.sh
cffi/patches/: 000-normalize-install-path.diff
common/: common.sh
common/post/: sdk.sh
cpython/: Setup.local  build.sh
cpython/patches/: cpython-3.12.9-use-build-python-to-freeze.diff
crypto/: build.sh
crypto/buildsrc/: crypto.go  crypto.h  go.mod  pkgIndex.tcl
crypto/tests/: crypto.test
docs/: go-extensions.md
gotest/: build.sh
gotest/buildsrc/: go.mod  gotest.go  gotest.h  pkgIndex.tcl
kitsh/: build.sh
kitsh/buildsrc/kitsh-0.0/: Makefile.common.in  Makefile.kitdll.in  Makefile.tclkit.in  aclocal.m4  boot.tcl  configure.ac  cvfs.tcl  cvfs_data.c  dir2c.tcl  gobuild.tcl  installvfs.tcl  kit.rc  kitInit.c  winMain.c
kitsh/buildsrc/kitsh-0.0/gokit/: cgo_helpers.c  cgo_helpers.h  cgo_helpers_windows.c  go.mod  main_unix.go  main_windows.go  main_windows_console.go
kitsh/buildsrc/kitsh-0.0/gokit-tclsh/: cgo_helpers.c  cgo_helpers.h  go.mod  main.go
kitsh/buildsrc/kitsh-0.0/gokit-wish/: cgo_helpers.c  cgo_helpers.h  go.mod  main.go
mime/: build.sh
mime/buildsrc/: go.mod  mime.go  mime.h  mimedb.go  pkgIndex.tcl
mime/docs/: mime.md
mk4tcl/: build.sh
openssl/: build.sh
parse_args/: build.sh
tbcload/: build.sh
tbcload/patches/: 000-fix-exact-tcl-version-check.diff
tcl/: build.sh
tcl/patches/9/: tcl-9-install-tclcompile.diff  tcl-9-no-tcl8-compat-libs.diff
tcl/patches/all/: tcl-all-install-tclcompile.diff
tcl/patchscripts/: fix-static-pkgs.sh
tclcompiler/: build.sh
tclcompiler/patches/: 000-fix-exact-tcl-version-check.diff  001-fix-tbcload-version.diff
tcllib/: build.sh  pkgIndex.tcl.in
tclparser/: build.sh
tcltrf/: build.sh
tcltrf/patches/: tcltrf-2.1.4-fix-sha_h-typedefs.diff
tclvfs/: build.sh
tclvfs/patches/: tclvfs-1.5.0-fix-freeinternalrep.diff  tclvfs-1.5.0-fix-mingw64-stat.diff  tclvfs-1.5.0-fix-tcl9-namespace.diff  tclvfs-1.5.0-static-load-fallback.diff
tclx/: build.sh
tclx/patches/: tclx-8.6.2-fixes.diff
tdom/: build.sh
tjson/: build.sh
tjson/patches/: 000-macos-foundation-libs.diff  000-use-stubs-etc.diff  001-fix-tcl-alloc-casts.diff
tk/: build.sh
tk/patches/all/: tk-8.6-defaults-in-private-headers.diff  tk-9.0-ttk-image-el-cache-makefiles.diff  tk-9.0-ttk-image-el-cache.diff
tkdnd/: build.sh
tkdnd/patches/: tkdnd-fix-tea-windowingsystem.diff  tkdnd-static-pkgindex.diff
tklib/: build.sh
tksvg/: build.sh
tls/: build.sh
tls/patches/: 000-pkgindex-init-cacert.diff  001-in-mem-cacert.diff  001-pkgindex-tcl9-static.diff
tohil/: build.sh
twapi/: build.sh
twapi/patches/9.0/: twapi-5.2.0-winchars-tcl9.diff
twapi/patches/all/: twapi-5.1.0-static-pkgindex-install.diff
zlib/: build.sh
zlibtcl/: build.sh
zlibtcl/patches/: zlibtcl-1.4.16-remove-tk-configure.diff  zlibtcl-2.0.1-remove-tk-configure.diff
